overflow fix attempt

--- a/itis3135/kaykreations/style/default.css
+++ b/itis3135/kaykreations/style/default.css
@@ -12,11 +12,14 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
 }
 
 body{
+    background-color: var(--alt1);
     background: linear-gradient(-45deg, var(--alt1), var(--alt2));
     font-family: 'Inter', sans-serif;
+    overflow: hidden;
 }
 
 /*header footer*/
